--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
   <title>Tecla + Keycode</title>
 </head>
 <body>
-  <h1 id="tecla"">Presiona una tecla</h1>
-  <h1 id="codigo"></h1>
+  <h1 id="tecla">
+    Tecla: <span id='colortecla'></span>
+  </h1>
+  <h1 id="codigo">
+    Código ASCII: <span id='colorcodigo'></span>
+  </h1>
   <script src="app.js"></script>
 </body>
 </html>
