--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,13 +8,19 @@
   <link rel="stylesheet" href="style.css">
   <title>Tecla + Keycode</title>
 </head>
+
 <body>
-  <h1 id="tecla">
-    Tecla: <span id='colortecla'></span>
-  </h1>
-  <h1 id="codigo">
-    Código ASCII: <span id='colorcodigo'></span>
-  </h1>
+
+  <div class='textos'>
+    <h1 id="tecla">
+      Tecla: <span id='colortecla'></span>
+    </h1>
+    <h1 id="codigo">
+      Código ASCII: <span id='colorcodigo'></span>
+    </h1>
+  </div>
+  
   <script src="app.js"></script>
 </body>
+
 </html>
